manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: releases
  namespace: releases
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: releases
  ports:
    - name: http
      port: 80
