manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: releases
  namespace: releases
spec:
  rules:
    - host: releases.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: releases
                port:
                  number: 80

  tls:
    - hosts:
        - releases.trueberryless.org
      secretName: releases
